--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,9 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": ["{options.outputPath}"],
+01          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/out-school",
             "index": "apps/out-school/src/index.html",
@@ -21,7 +23,10 @@
               "apps/out-school/src/favicon.ico",
               "apps/out-school/src/assets"
             ],
-            "styles": ["apps/out-school/src/styles.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "apps/out-school/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -86,7 +91,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/out-school"],
+          "outputs": [
+            "coverage/apps/out-school"
+          ],
           "options": {
             "jestConfig": "apps/out-school/jest.config.js",
             "passWithNoTests": true
@@ -114,14 +121,20 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
+          "outputs": [
+            "{options.outputFile}"
+          ],
           "options": {
-            "lintFilePatterns": ["apps/out-school-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/out-school-e2e/**/*.{js,ts}"
+            ]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": ["out-school"]
+      "implicitDependencies": [
+        "out-school"
+      ]
     }
   }
 }
