feat: mock server

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,15 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "paths": {
+      "@stack/assets": ["libs/assets/src/index.ts"],
+      "@stack/mock-server": ["libs/mock-server/src/index.ts"],
+      "@stack/models": ["libs/models/src/index.ts"],
+      "@stack/out-school": ["apps/out-school/src/index.ts"],
+      "@stack/services": ["libs/services/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
