--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,84 @@
 {
   "version": 1,
   "projects": {
+    "assets": {
+      "projectType": "library",
+      "root": "libs/assets",
+      "sourceRoot": "libs/assets/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/assets"],
+          "options": {
+            "jestConfig": "libs/assets/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/assets/src/**/*.ts",
+              "libs/assets/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
+    "mock-server": {
+      "projectType": "library",
+      "root": "libs/mock-server",
+      "sourceRoot": "libs/mock-server/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/mock-server"],
+          "options": {
+            "jestConfig": "libs/mock-server/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/mock-server/src/**/*.ts",
+              "libs/mock-server/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
+    "models": {
+      "projectType": "library",
+      "root": "libs/models",
+      "sourceRoot": "libs/models/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/models"],
+          "options": {
+            "jestConfig": "libs/models/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/models/src/**/*.ts",
+              "libs/models/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
     "out-school": {
       "projectType": "application",
       "root": "apps/out-school",
@@ -9,9 +87,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-01          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/out-school",
             "index": "apps/out-school/src/index.html",
@@ -21,7 +97,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "apps/out-school/src/favicon.ico",
-              "apps/out-school/src/assets"
+              "apps/out-school/src/assets",
+              {
+                "glob": "mockServiceWorker.js",
+                "input": "libs/assets/src/lib/js",
+                "output": "/"
+              }
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -58,6 +139,20 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "mock": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "apps/out-school/src/environments/environment.ts",
+                  "with": "apps/out-school/src/environments/environment.mock.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -70,6 +165,9 @@
             },
             "development": {
               "browserTarget": "out-school:build:development"
+            },
+            "mock": {
+              "browserTarget": "out-school:build:mock"
             }
           },
           "defaultConfiguration": "development"
@@ -91,9 +189,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/out-school"
-          ],
+          "outputs": ["coverage/apps/out-school"],
           "options": {
             "jestConfig": "apps/out-school/jest.config.js",
             "passWithNoTests": true
@@ -121,20 +217,40 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "apps/out-school-e2e/**/*.{js,ts}"
-            ]
+            "lintFilePatterns": ["apps/out-school-e2e/**/*.{js,ts}"]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": [
-        "out-school"
-      ]
+      "implicitDependencies": ["out-school"]
+    },
+    "services": {
+      "projectType": "library",
+      "root": "libs/services",
+      "sourceRoot": "libs/services/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/services"],
+          "options": {
+            "jestConfig": "libs/services/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/services/src/**/*.ts",
+              "libs/services/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
     }
   }
 }
