--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-    "start": "nx serve",
+    "start": "nx serve -c=mock",
     "build": "nx build",
     "test": "nx test"
   },
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@nrwl/angular": "13.4.1",
+    "dexie": "^3.2.1",
+    "msw": "^0.36.8",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -54,5 +56,8 @@
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.4.3"
+  },
+  "msw": {
+    "workerDirectory": "libs/assets/src/lib/js/mockServiceWorker.js"
   }
 }
