--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve -c=mock",
     "build": "nx build",
-    "test": "nx test"
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "jest --env=jest-environment-jsdom-sixteen",
+    "test:e2e": "start-server-and-test start http://localhost:4200 cy:run"
   },
   "private": true,
   "dependencies": {
@@ -55,7 +57,14 @@
     "jest-preset-angular": "11.0.0",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "typescript": "~4.4.3",
+    "@testing-library/angular": "^11.0.3",
+    "@testing-library/cypress": "^8.0.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/user-event": "^13.5.0",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
+    "start-server-and-test": "^1.14.0",
+    "fake-indexeddb": "3.1.7"
   },
   "msw": {
     "workerDirectory": "libs/assets/src/lib/js/mockServiceWorker.js"
