--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/out-school/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "sourceMap": true,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
