--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "nx build",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "jest --env=jest-environment-jsdom-sixteen",
-    "test:e2e": "start-server-and-test start http://localhost:4200 cy:run"
+    "test:e2e": "start-server-and-test start http://localhost:4200 cy:run",
+    "source-map-explore": "source-map-explorer dist/apps/out-school/**/*.js",
+    "explore": "run-s build source-map-explore",
+    "compodoc": "npx compodoc -p tsconfig.doc.json",
+    "ngd": "npx ngd -p tsconfig.doc.json -o"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +42,8 @@
     "@angular/cli": "~13.1.0",
     "@angular/compiler-cli": "~13.1.0",
     "@angular/language-service": "~13.1.0",
+    "@compodoc/compodoc": "^1.1.19",
+    "@compodoc/ngd-cli": "^2.1.0",
     "@nrwl/cli": "13.4.1",
     "@nrwl/cypress": "13.4.1",
     "@nrwl/eslint-plugin-nx": "13.4.1",
@@ -45,6 +51,10 @@
     "@nrwl/linter": "13.4.1",
     "@nrwl/tao": "13.4.1",
     "@nrwl/workspace": "13.4.1",
+    "@testing-library/angular": "^11.0.3",
+    "@testing-library/cypress": "^8.0.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
@@ -53,18 +63,17 @@
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "fake-indexeddb": "3.1.7",
+    "http-server": "^14.1.0",
     "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.4.3",
-    "@testing-library/angular": "^11.0.3",
-    "@testing-library/cypress": "^8.0.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/user-event": "^13.5.0",
     "jest-environment-jsdom-sixteen": "^2.0.0",
+    "jest-preset-angular": "11.0.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.1",
+    "source-map-explorer": "^2.5.2",
     "start-server-and-test": "^1.14.0",
-    "fake-indexeddb": "3.1.7"
+    "ts-jest": "27.0.5",
+    "typescript": "~4.4.3"
   },
   "msw": {
     "workerDirectory": "libs/assets/src/lib/js/mockServiceWorker.js"
