--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve -c=mock",
     "build": "nx build",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "nx test && nx e2e",
     "test:unit": "jest --env=jest-environment-jsdom-sixteen",
     "test:e2e": "start-server-and-test start http://localhost:4200 cy:run",
     "source-map-explore": "source-map-explorer dist/apps/out-school/**/*.js",
@@ -59,6 +59,7 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
+    "autoprefixer": "^10.4.0",
     "cypress": "^9.1.0",
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
@@ -68,10 +69,16 @@
     "jest": "27.2.3",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-preset-angular": "11.0.0",
+    "ng-packagr": "^13.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "^2.3.1",
     "source-map-explorer": "^2.5.2",
     "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.4.3"
   },
