feat: add zoom + api

--- a/nx.json
+++ b/nx.json
@@ -12,7 +12,8 @@
       "dependencies": "*",
       "devDependencies": "*"
     },
-    ".eslintrc.json": "*"
+    ".eslintrc.json": "*",
+    "angular.json": "*"
   },
   "tasksRunnerOptions": {
     "default": {
