--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
     "esModuleInterop": true,
     "paths": {
       "@stack/assets": ["libs/assets/src/index.ts"],
+      "@stack/chat": ["libs/chat/src/index.ts"],
       "@stack/mock-server": ["libs/mock-server/src/index.ts"],
       "@stack/models": ["libs/models/src/index.ts"],
       "@stack/out-school": ["apps/out-school/src/index.ts"],
