--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,61 @@
 {
   "version": 1,
   "projects": {
+    "api-school": {
+      "root": "apps/api/school",
+      "sourceRoot": "apps/api/school/src",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:webpack",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/api/school",
+            "main": "apps/api/school/src/main.ts",
+            "tsConfig": "apps/api/school/tsconfig.app.json",
+            "assets": ["apps/api/school/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/api/school/src/environments/environment.ts",
+                  "with": "apps/api/school/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:node",
+          "options": {
+            "buildTarget": "api-school:build"
+          },
+          "sslKey": "./certs/ca.key",
+          "sslCert": "./certs/ca.crt",
+          "ssl": true
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/api/school/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/api/school"],
+          "options": {
+            "jestConfig": "apps/api/school/jest.config.ts",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
     "assets": {
       "projectType": "library",
       "root": "libs/assets",
@@ -21,6 +76,32 @@
             "lintFilePatterns": [
               "libs/assets/src/**/*.ts",
               "libs/assets/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
+    "chat": {
+      "projectType": "library",
+      "root": "libs/chat",
+      "sourceRoot": "libs/chat/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/chat"],
+          "options": {
+            "jestConfig": "libs/chat/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/chat/src/**/*.ts",
+              "libs/chat/src/**/*.html"
             ]
           }
         }
@@ -172,7 +253,13 @@
               "browserTarget": "out-school:build:mock"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "sslKey": "./certs/ca.key",
+            "sslCert": "./certs/ca.crt",
+            "ssl": false,
+            "proxyConfig": "apps/out-school/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
