--- a/package.json
+++ b/package.json
@@ -27,9 +27,22 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@nrwl/angular": "13.4.1",
+    "@zoomus/websdk": "^2.4.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dexie": "^3.2.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^5.0.2",
+    "jsrsasign": "^10.5.8",
     "msw": "^0.36.8",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -44,17 +57,22 @@
     "@angular/language-service": "~13.1.0",
     "@compodoc/compodoc": "^1.1.19",
     "@compodoc/ngd-cli": "^2.1.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.4.1",
     "@nrwl/cypress": "13.4.1",
     "@nrwl/eslint-plugin-nx": "13.4.1",
     "@nrwl/jest": "13.4.1",
     "@nrwl/linter": "13.4.1",
+    "@nrwl/nest": "^14.1.4",
+    "@nrwl/node": "14.1.4",
     "@nrwl/tao": "13.4.1",
     "@nrwl/workspace": "13.4.1",
     "@testing-library/angular": "^11.0.3",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
@@ -80,6 +98,7 @@
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.2",
     "ts-jest": "27.0.5",
+    "ts-node": "9.1.1",
     "typescript": "~4.4.3"
   },
   "msw": {
