--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "source-map-explore": "source-map-explorer dist/apps/out-school/**/*.js",
     "explore": "run-s build source-map-explore",
     "compodoc": "npx compodoc -p tsconfig.doc.json",
-    "ngd": "npx ngd -p tsconfig.doc.json -o"
+    "ngd": "npx ngd -p tsconfig.doc.json -o",
+    "stats": "webpack-bundle-analyzer dist/apps/out-school/stats.json",
+    "analyze": "run-s \"build -- --prod --stats-json\" stats"
   },
   "private": true,
   "dependencies": {
@@ -80,7 +82,10 @@
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.2",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "ts-node": "9.1.1",
+    "typescript": "~4.4.3",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2"
   },
   "msw": {
     "workerDirectory": "libs/assets/src/lib/js/mockServiceWorker.js"
