--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "^13.1.1",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/material": "^13.1.1",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "@nrwl/angular": "13.4.1",
+    "@angular/animations": "14.0.0",
+    "@angular/cdk": "14.0.0",
+    "@angular/common": "14.0.0",
+    "@angular/compiler": "14.0.0",
+    "@angular/core": "14.0.0",
+    "@angular/forms": "14.0.0",
+    "@angular/material": "14.0.0",
+    "@angular/platform-browser": "14.0.0",
+    "@angular/platform-browser-dynamic": "14.0.0",
+    "@angular/router": "14.0.0",
+    "@nrwl/angular": "14.1.9",
     "dexie": "^3.2.1",
     "msw": "^0.36.8",
     "rxjs": "~7.4.0",
@@ -37,55 +37,56 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.0",
+    "@angular-devkit/build-angular": "14.0.0",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.1.0",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/language-service": "~13.1.0",
+    "@angular/cli": "14.0.0",
+    "@angular/compiler-cli": "14.0.0",
+    "@angular/language-service": "14.0.0",
     "@compodoc/compodoc": "^1.1.19",
     "@compodoc/ngd-cli": "^2.1.0",
-    "@nrwl/cli": "13.4.1",
-    "@nrwl/cypress": "13.4.1",
-    "@nrwl/eslint-plugin-nx": "13.4.1",
-    "@nrwl/jest": "13.4.1",
-    "@nrwl/linter": "13.4.1",
-    "@nrwl/tao": "13.4.1",
-    "@nrwl/workspace": "13.4.1",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/cypress": "14.1.9",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/nx-cloud": "14.0.5",
+    "@nrwl/workspace": "14.1.9",
     "@testing-library/angular": "^11.0.3",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "27.0.2",
+    "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^9.1.0",
-    "eslint": "8.2.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "fake-indexeddb": "3.1.7",
     "http-server": "^14.1.0",
-    "jest": "27.2.3",
+    "jest": "27.5.1",
     "jest-environment-jsdom-sixteen": "^2.0.0",
-    "jest-preset-angular": "11.0.0",
-    "ng-packagr": "^13.0.0",
+    "jest-preset-angular": "11.1.1",
+    "ng-packagr": "14.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-url": "^10.1.1",
-    "prettier": "^2.3.1",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "7.5.0",
+    "postcss-url": "10.1.3",
+    "prettier": "2.6.2",
     "source-map-explorer": "^2.5.2",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.2",
-    "ts-jest": "27.0.5",
+    "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
-    "typescript": "~4.4.3",
+    "typescript": "4.6.4",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "nx": "14.1.9"
   },
   "msw": {
     "workerDirectory": "libs/assets/src/lib/js/mockServiceWorker.js"
