fix: remove shared library

--- a/nx.json
+++ b/nx.json
@@ -16,6 +16,12 @@
   },
   "tasksRunnerOptions": {
     "default": {
+      "runner": "@nrwl/workspace/tasks-runners/default",
+      "options": {
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
+      }
+    },
+    "cloud": {
       "runner": "@nrwl/nx-cloud",
       "options": {
         "cacheableOperations": ["build", "lint", "test", "e2e"],
