--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,8 +21,7 @@
       "@stack/mock-server": ["libs/mock-server/src/index.ts"],
       "@stack/models": ["libs/models/src/index.ts"],
       "@stack/out-school": ["apps/out-school/src/index.ts"],
-      "@stack/services": ["libs/services/src/index.ts"],
-      "@stack/shared": ["libs/shared/src/index.ts"]
+      "@stack/services": ["libs/services/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
