--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "@angular/platform-browser": "14.0.0",
     "@angular/platform-browser-dynamic": "14.0.0",
     "@angular/router": "14.0.0",
+    "@ngrx/component-store": "~13.0.0",
+    "@ngrx/effects": "~13.0.0",
+    "@ngrx/entity": "~13.0.0",
+    "@ngrx/router-store": "~13.0.0",
+    "@ngrx/store": "~13.0.0",
     "@nrwl/angular": "14.1.9",
     "dexie": "^3.2.1",
     "msw": "^0.36.8",
@@ -46,6 +51,8 @@
     "@angular/language-service": "14.0.0",
     "@compodoc/compodoc": "^1.1.19",
     "@compodoc/ngd-cli": "^2.1.0",
+    "@ngrx/schematics": "~13.0.0",
+    "@ngrx/store-devtools": "~13.0.0",
     "@nrwl/cli": "14.1.9",
     "@nrwl/cypress": "14.1.9",
     "@nrwl/eslint-plugin-nx": "14.1.9",
@@ -68,11 +75,13 @@
     "eslint-plugin-cypress": "^2.10.3",
     "fake-indexeddb": "3.1.7",
     "http-server": "^14.1.0",
+    "jasmine-marbles": "~0.9.1",
     "jest": "27.5.1",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-preset-angular": "11.1.1",
     "ng-packagr": "14.0.0",
     "npm-run-all": "^4.1.5",
+    "nx": "14.1.9",
     "postcss": "^8.4.5",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
@@ -85,8 +94,7 @@
     "ts-node": "9.1.1",
     "typescript": "4.6.4",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "nx": "14.1.9"
+    "webpack-cli": "^4.9.2"
   },
   "msw": {
     "workerDirectory": "libs/assets/src/lib/js/mockServiceWorker.js"
