--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,29 @@
       },
       "tags": []
     },
+    "auth": {
+      "projectType": "library",
+      "root": "libs/auth",
+      "sourceRoot": "libs/auth/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/auth"],
+          "options": {
+            "jestConfig": "libs/auth/jest.config.ts",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/auth/**/*.ts", "libs/auth/**/*.html"]
+          }
+        }
+      },
+      "tags": []
+    },
     "mock-server": {
       "projectType": "library",
       "root": "libs/mock-server",
@@ -252,6 +275,58 @@
             "lintFilePatterns": [
               "libs/services/src/**/*.ts",
               "libs/services/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
+    "shared-components": {
+      "projectType": "library",
+      "root": "libs/shared/components",
+      "sourceRoot": "libs/shared/components/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/shared/components"],
+          "options": {
+            "jestConfig": "libs/shared/components/jest.config.ts",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/shared/components/**/*.ts",
+              "libs/shared/components/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
+    "shared-ui-kit": {
+      "projectType": "library",
+      "root": "libs/shared/ui-kit",
+      "sourceRoot": "libs/shared/ui-kit/src",
+      "prefix": "stack",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/shared/ui-kit"],
+          "options": {
+            "jestConfig": "libs/shared/ui-kit/jest.config.ts",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/shared/ui-kit/**/*.ts",
+              "libs/shared/ui-kit/**/*.html"
             ]
           }
         }
