--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,5 +31,8 @@
       "extends": ["plugin:@nrwl/nx/javascript"],
       "rules": {}
     }
-  ]
+  ],
+  "rules": {
+    "no-non-null-assertion": 0
+  }
 }
