--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start:api": "nx serve api-school",
     "start:api:debug": "nx serve api-school --inspect",
     "start:store": "nx serve datastore",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "nx format --all"
   },
   "private": true,
   "dependencies": {
