fix: migrate nx / angular.json => project.json

--- a/angular.json
+++ b/angular.json
@@ -1,580 +1,19 @@
 {
-  "version": 1,
+  "version": 2,
   "projects": {
-    "api-school": {
-      "root": "apps/api/school",
-      "sourceRoot": "apps/api/school/src",
-      "projectType": "application",
-      "architect": {
-        "build": {
-          "builder": "@nrwl/node:webpack",
-          "outputs": ["{options.outputPath}"],
-          "options": {
-            "outputPath": "dist/apps/api/school",
-            "main": "apps/api/school/src/main.ts",
-            "tsConfig": "apps/api/school/tsconfig.app.json",
-            "assets": ["apps/api/school/src/assets"]
-          },
-          "configurations": {
-            "production": {
-              "optimization": true,
-              "extractLicenses": true,
-              "inspect": false,
-              "fileReplacements": [
-                {
-                  "replace": "apps/api/school/src/environments/environment.ts",
-                  "with": "apps/api/school/src/environments/environment.prod.ts"
-                }
-              ]
-            }
-          }
-        },
-        "serve": {
-          "builder": "@nrwl/node:node",
-          "options": {
-            "buildTarget": "api-school:build"
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
-          "options": {
-            "lintFilePatterns": ["apps/api/school/**/*.ts"]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/api/school"],
-          "options": {
-            "jestConfig": "apps/api/school/jest.config.ts",
-            "passWithNoTests": true
-          }
-        }
-      },
-      "tags": []
-    },
-    "api-services": {
-      "projectType": "library",
-      "root": "libs/api/services",
-      "sourceRoot": "libs/api/services/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/api/services"],
-          "options": {
-            "jestConfig": "libs/api/services/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "libs/api/services/**/*.ts",
-              "libs/api/services/**/*.html"
-            ]
-          }
-        }
-      },
-      "tags": []
-    },
-    "assets": {
-      "projectType": "library",
-      "root": "libs/assets",
-      "sourceRoot": "libs/assets/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/assets"],
-          "options": {
-            "jestConfig": "libs/assets/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "libs/assets/src/**/*.ts",
-              "libs/assets/src/**/*.html"
-            ]
-          }
-        }
-      },
-      "tags": []
-    },
-    "auth": {
-      "projectType": "library",
-      "root": "libs/auth",
-      "sourceRoot": "libs/auth/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/auth"],
-          "options": {
-            "jestConfig": "libs/auth/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": ["libs/auth/**/*.ts", "libs/auth/**/*.html"]
-          }
-        }
-      },
-      "tags": []
-    },
-    "database": {
-      "root": "libs/database",
-      "sourceRoot": "libs/database/src",
-      "projectType": "library",
-      "architect": {
-        "build": {
-          "builder": "@nrwl/js:tsc",
-          "outputs": ["{options.outputPath}"],
-          "options": {
-            "outputPath": "dist/libs/database",
-            "main": "libs/database/src/index.ts",
-            "tsConfig": "libs/database/tsconfig.lib.json",
-            "assets": ["libs/database/*.md"]
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
-          "options": {
-            "lintFilePatterns": ["libs/database/**/*.ts"]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/database"],
-          "options": {
-            "jestConfig": "libs/database/jest.config.ts",
-            "passWithNoTests": true
-          }
-        }
-      },
-      "tags": []
-    },
-    "datastore": {
-      "projectType": "application",
-      "root": "apps/datastore",
-      "sourceRoot": "apps/datastore/src",
-      "prefix": "stack",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "outputs": ["{options.outputPath}"],
-          "options": {
-            "outputPath": "dist/apps/datastore",
-            "index": "apps/datastore/src/index.html",
-            "main": "apps/datastore/src/main.ts",
-            "polyfills": "apps/datastore/src/polyfills.ts",
-            "tsConfig": "apps/datastore/tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "apps/datastore/src/favicon.ico",
-              "apps/datastore/src/assets"
-            ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "apps/datastore/src/styles.scss"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "apps/datastore/src/environments/environment.ts",
-                  "with": "apps/datastore/src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "browserTarget": "datastore:build:production"
-            },
-            "development": {
-              "browserTarget": "datastore:build:development"
-            }
-          },
-          "defaultConfiguration": "development",
-          "options": {
-            "port": 4201,
-            "proxyConfig": "apps/datastore/proxy.conf.json"
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "datastore:build"
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "apps/datastore/**/*.ts",
-              "apps/datastore/**/*.html"
-            ]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/datastore"],
-          "options": {
-            "jestConfig": "apps/datastore/jest.config.ts",
-            "passWithNoTests": true
-          }
-        }
-      },
-      "tags": []
-    },
-    "datastore-e2e": {
-      "root": "apps/datastore-e2e",
-      "sourceRoot": "apps/datastore-e2e/src",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@nrwl/cypress:cypress",
-          "options": {
-            "cypressConfig": "apps/datastore-e2e/cypress.json",
-            "devServerTarget": "datastore:serve:development"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "datastore:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
-          "options": {
-            "lintFilePatterns": ["apps/datastore-e2e/**/*.{js,ts}"]
-          }
-        }
-      },
-      "tags": [],
-      "implicitDependencies": ["datastore"]
-    },
-    "mock-server": {
-      "projectType": "library",
-      "root": "libs/mock-server",
-      "sourceRoot": "libs/mock-server/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/mock-server"],
-          "options": {
-            "jestConfig": "libs/mock-server/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "libs/mock-server/src/**/*.ts",
-              "libs/mock-server/src/**/*.html"
-            ]
-          }
-        }
-      },
-      "tags": []
-    },
-    "models": {
-      "projectType": "library",
-      "root": "libs/models",
-      "sourceRoot": "libs/models/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/models"],
-          "options": {
-            "jestConfig": "libs/models/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "libs/models/src/**/*.ts",
-              "libs/models/src/**/*.html"
-            ]
-          }
-        }
-      },
-      "tags": []
-    },
-    "out-school": {
-      "projectType": "application",
-      "root": "apps/out-school",
-      "sourceRoot": "apps/out-school/src",
-      "prefix": "stack",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "outputs": ["{options.outputPath}"],
-          "options": {
-            "allowedCommonJsDependencies": [
-              "@mswjs/cookies",
-              "@mswjs/interceptors"
-            ],
-            "outputPath": "dist/apps/out-school",
-            "index": "apps/out-school/src/index.html",
-            "main": "apps/out-school/src/main.ts",
-            "polyfills": "apps/out-school/src/polyfills.ts",
-            "tsConfig": "apps/out-school/tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "apps/out-school/src/favicon.ico",
-              "apps/out-school/src/assets",
-              {
-                "glob": "mockServiceWorker.js",
-                "input": "libs/assets/src/lib/js",
-                "output": "/"
-              }
-            ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "apps/out-school/src/styles.scss"
-            ],
-            "scripts": [],
-            "sourceMap": true,
-            "namedChunks": true
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "apps/out-school/src/environments/environment.ts",
-                  "with": "apps/out-school/src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
-            },
-            "mock": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true,
-              "fileReplacements": [
-                {
-                  "replace": "apps/out-school/src/environments/environment.ts",
-                  "with": "apps/out-school/src/environments/environment.mock.ts"
-                }
-              ]
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "browserTarget": "out-school:build:production"
-            },
-            "development": {
-              "browserTarget": "out-school:build:development"
-            },
-            "mock": {
-              "browserTarget": "out-school:build:mock"
-            }
-          },
-          "defaultConfiguration": "development",
-          "options": {
-            "proxyConfig": "apps/out-school/proxy.conf.json"
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "out-school:build"
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "apps/out-school/src/**/*.ts",
-              "apps/out-school/src/**/*.html"
-            ]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/out-school"],
-          "options": {
-            "jestConfig": "apps/out-school/jest.config.ts",
-            "passWithNoTests": true
-          }
-        }
-      },
-      "tags": []
-    },
-    "out-school-e2e": {
-      "root": "apps/out-school-e2e",
-      "sourceRoot": "apps/out-school-e2e/src",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@nrwl/cypress:cypress",
-          "options": {
-            "cypressConfig": "apps/out-school-e2e/cypress.json",
-            "devServerTarget": "out-school:serve:development"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "out-school:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
-          "options": {
-            "lintFilePatterns": ["apps/out-school-e2e/**/*.{js,ts}"]
-          }
-        }
-      },
-      "tags": [],
-      "implicitDependencies": ["out-school"]
-    },
-    "services": {
-      "projectType": "library",
-      "root": "libs/services",
-      "sourceRoot": "libs/services/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/services"],
-          "options": {
-            "jestConfig": "libs/services/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "libs/services/src/**/*.ts",
-              "libs/services/src/**/*.html"
-            ]
-          }
-        }
-      },
-      "tags": []
-    },
-    "shared-components": {
-      "projectType": "library",
-      "root": "libs/shared/components",
-      "sourceRoot": "libs/shared/components/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/shared/components"],
-          "options": {
-            "jestConfig": "libs/shared/components/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "libs/shared/components/**/*.ts",
-              "libs/shared/components/**/*.html"
-            ]
-          }
-        }
-      },
-      "tags": []
-    },
-    "shared-ui-kit": {
-      "projectType": "library",
-      "root": "libs/shared/ui-kit",
-      "sourceRoot": "libs/shared/ui-kit/src",
-      "prefix": "stack",
-      "architect": {
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/shared/ui-kit"],
-          "options": {
-            "jestConfig": "libs/shared/ui-kit/jest.config.ts",
-            "passWithNoTests": true
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "libs/shared/ui-kit/**/*.ts",
-              "libs/shared/ui-kit/**/*.html"
-            ]
-          }
-        }
-      },
-      "tags": []
-    }
+    "api-school": "apps/api/school",
+    "api-services": "libs/api/services",
+    "assets": "libs/assets",
+    "auth": "libs/auth",
+    "database": "libs/database",
+    "datastore": "apps/datastore",
+    "datastore-e2e": "apps/datastore-e2e",
+    "mock-server": "libs/mock-server",
+    "models": "libs/models",
+    "out-school": "apps/out-school",
+    "out-school-e2e": "apps/out-school-e2e",
+    "services": "libs/services",
+    "shared-components": "libs/shared/components",
+    "shared-ui-kit": "libs/shared/ui-kit"
   }
 }
