--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main && husky install",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main && husky install",
     "prepublishOnly": "pinst --disable",
     "postpack": "pinst --enable",
     "start": "nx serve",
@@ -28,25 +28,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.0",
-    "@angular/cdk": "14.0.0",
-    "@angular/common": "14.0.0",
-    "@angular/compiler": "14.0.0",
-    "@angular/core": "14.0.0",
-    "@angular/forms": "14.0.0",
-    "@angular/material": "14.0.0",
-    "@angular/platform-browser": "14.0.0",
-    "@angular/platform-browser-dynamic": "14.0.0",
-    "@angular/router": "14.0.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@ngrx/component-store": "~13.0.0",
-    "@ngrx/effects": "~13.0.0",
-    "@ngrx/entity": "~13.0.0",
-    "@ngrx/router-store": "^14.0.1",
-    "@ngrx/store": "~13.0.0",
-    "@nrwl/angular": "14.1.9",
+    "@angular/animations": "14.1.3",
+    "@angular/cdk": "14.1.3",
+    "@angular/common": "14.1.3",
+    "@angular/compiler": "14.1.3",
+    "@angular/core": "14.1.3",
+    "@angular/forms": "14.1.3",
+    "@angular/material": "14.1.3",
+    "@angular/platform-browser": "14.1.3",
+    "@angular/platform-browser-dynamic": "14.1.3",
+    "@angular/router": "14.1.3",
+    "@nestjs/common": "9.0.11",
+    "@nestjs/core": "9.0.11",
+    "@nestjs/platform-express": "9.0.11",
+    "@ngrx/component-store": "14.0.2",
+    "@ngrx/effects": "14.0.2",
+    "@ngrx/entity": "14.0.2",
+    "@ngrx/router-store": "14.0.2",
+    "@ngrx/store": "14.0.2",
+    "@nrwl/angular": "14.5.9",
     "argon2": "^0.28.5",
     "cookie-parser": "^1.4.6",
     "date-fns": "^2.28.0",
@@ -58,37 +58,37 @@
     "nodemailer": "^6.7.7",
     "password-validator": "^5.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.4.0",
+    "rxjs": "7.5.6",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
     "voca": "^1.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "14.0.0",
-    "@angular/compiler-cli": "14.0.0",
-    "@angular/language-service": "14.0.0",
+    "@angular-devkit/build-angular": "14.1.3",
+    "@angular-eslint/eslint-plugin": "14.0.3",
+    "@angular-eslint/eslint-plugin-template": "14.0.3",
+    "@angular-eslint/template-parser": "14.0.3",
+    "@angular/cli": "~14.1.0",
+    "@angular/compiler-cli": "14.1.3",
+    "@angular/language-service": "14.1.3",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-angular": "^17.0.3",
     "@compodoc/compodoc": "^1.1.19",
     "@compodoc/ngd-cli": "^2.1.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@ngrx/schematics": "~13.0.0",
-    "@ngrx/store-devtools": "~13.0.0",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/nest": "^14.2.4",
-    "@nrwl/node": "14.2.4",
-    "@nrwl/nx-cloud": "14.0.5",
-    "@nrwl/workspace": "14.1.9",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.11",
+    "@ngrx/schematics": "14.0.2",
+    "@ngrx/store-devtools": "14.0.2",
+    "@nrwl/cli": "14.5.9",
+    "@nrwl/cypress": "14.5.9",
+    "@nrwl/eslint-plugin-nx": "14.5.9",
+    "@nrwl/jest": "14.5.9",
+    "@nrwl/linter": "14.5.9",
+    "@nrwl/nest": "14.5.9",
+    "@nrwl/node": "14.5.9",
+    "@nrwl/nx-cloud": "14.5.4",
+    "@nrwl/workspace": "14.5.9",
     "@testing-library/angular": "^11.0.3",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -96,19 +96,19 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/jest": "27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "14.14.33",
+    "@types/node": "18.7.1",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
     "@types/voca": "^1.4.2",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
     "autoprefixer": "^10.4.0",
     "chalk": "^4.1.2",
     "commitizen": "^4.2.5",
     "cypress": "^9.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "8.12.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint": "8.15.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "fake-indexeddb": "3.1.8",
     "http-server": "^14.1.0",
@@ -116,23 +116,23 @@
     "jasmine-marbles": "~0.9.1",
     "jest": "27.5.1",
     "jest-environment-jsdom-sixteen": "^2.0.0",
-    "jest-preset-angular": "11.1.1",
+    "jest-preset-angular": "11.1.2",
     "lint-staged": "^13.0.3",
-    "ng-packagr": "14.0.0",
+    "ng-packagr": "14.1.0",
     "npm-run-all": "^4.1.5",
-    "nx": "14.1.9",
+    "nx": "14.5.9",
     "pinst": "^3.0.0",
     "postcss": "^8.4.5",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
     "postcss-url": "10.1.3",
-    "prettier": "2.6.2",
+    "prettier": "2.7.1",
     "source-map-explorer": "^2.5.2",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.2",
     "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
-    "typescript": "4.6.4",
+    "ts-node": "10.9.1",
+    "typescript": "4.7.4",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
   },
